Compilation/test/valides/test3.tpc
int t;
char g ,y ,w;

int main(void)  {
  int r1;
  int b;
  int u;
  int v,p, a;
  char letter, digit,punct;
  int s, c, r2;
  r1 = 2;
  b = 133;
  p = 3;
  a = 4;
  r2=24;
  b=r1+r2;
  w=3;
  t=1;
  punct='.';
  return r1;
}