Compilation/test/invalides/test-table-symboles2.tpc
/* test-table-symboles.tpc */

/* Test file for simplified translator of a declaration of variables in C */
int r1,b,s,c,r2;
char letter, digit, punct;

int main(void)  {
  oups = -1;
  r1=12;
  oups2 = 'z';
  r2=24;
  b=r1+r2;
  punct='.';
  return b;
}
